# research-mind

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
graph/: builder.py  nodes.py  state.py
models/: schemas.py
prompts/: researchers.py
tests/: conftest.py
tests/integration/: test_graph_builder.py  test_pipeline.py
tests/unit/: test_checkpoint.py  test_nodes.py  test_rate_limiter.py  test_schemas.py  test_token_budget.py  test_validator.py  test_vector_store.py
tools/: scrapper.py  search.py  validator.py  vector_store.py
utils/: checkpoint.py  rate_limiter.py  token_budget.py
